--- a/index.html
+++ b/index.html
@@ -1,31 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Camilo Castro - Full Stack Developer</title>
 </head>
+
 <body>
     <div class="container text-center">
         <div class="row">
-            <div class="col">
-                <h1>Camilo Castro</h1>
+            <div class="col" id="name">
+                <h1>
+                    <span style="--i:1">C</span>
+                    <span style="--i:2">a</span>
+                    <span style="--i:3">m</span>
+                    <span style="--i:4">i</span>
+                    <span style="--i:5">l</span>
+                    <span style="--i:6">o</span>
+                    <span style="--i:7"> </span>
+                    <span style="--i:8">C</span>
+                    <span style="--i:9">a</span>
+                    <span style="--i:10">s</span>
+                    <span style="--i:11">t</span>
+                    <span style="--i:12">r</span>
+                    <span style="--i:13">o</span>
+                </h1>
             </div>
         </div>
         <div class="row">
-            <div class="col">
-                <h3>Full Stack Developer</h3>
+            <div class="col" id="role">
+                <h3>
+                    <span style="--i:14">F</span>
+                    <span style="--i:15">u</span>
+                    <span style="--i:16">l</span>
+                    <span style="--i:17">l</span>
+                    <span style="--i:18"> </span>
+                    <span style="--i:19">S</span>
+                    <span style="--i:20">t</span>
+                    <span style="--i:21">a</span>
+                    <span style="--i:22">c</span>
+                    <span style="--i:23">k</span>
+                    <span style="--i:24"> </span>
+                    <span style="--i:25">D</span>
+                    <span style="--i:26">e</span>
+                    <span style="--i:27">v</span>
+                    <span style="--i:28">e</span>
+                    <span style="--i:29">l</span>
+                    <span style="--i:30">o</span>
+                    <span style="--i:31">p</span>
+                    <span style="--i:32">e</span>
+                    <span style="--i:33">r</span>
+                </h3>
             </div>
         </div>
-        <div class="d-flex flex-row">
+        <div class="d-flex flex-row" id="icons">
             <div class="col-4 text-right">
-                <a href="mailto:camilojmcastro.com" class="fa-solid fa-envelope btn" target="_blank"></a>
+                <a href="mailto:camilojmcastro.com" class="fa-solid fa-envelope btn"></a>
             </div>
             <div class="col-4">
-                <a href="https://www.linkedin.com/in/camilojmcastro/" class="fa-brands fa-linkedin btn" target="_blank"></a>
+                <a href="https://www.linkedin.com/in/camilojmcastro/" class="fa-brands fa-linkedin btn"
+                    target="_blank"></a>
             </div>
             <div class="col-4 text-left">
                 <a href="https://github.com/Camilojmcastro" class="fa-brands fa-github btn" target="_blank"></a>
@@ -34,4 +72,5 @@
     </div>
     <div class="overlay"></div>
 </body>
+
 </html>
